Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-title: Find Your Spirit Animal
-hero: Find your spirit animal
-subtitle: The animal friendly clothing company
+title: eARTh
+hero: eARTh
+subtitle: Unique art powered by the wild nature of earth.
 ---
 
 <div class="content" id="products">
